--- a/install_files/ansible-base/roles/common/tasks/install_ntp.yml
+++ b/install_files/ansible-base/roles/common/tasks/install_ntp.yml
@@ -1,10 +1,15 @@
 ---
-- name: Install ntp for ntpd.
+- name: Install base packages
   apt:
-    pkg: ntp
+    pkg: "{{ item }}"
     state: latest
     update_cache: yes
     cache_valid_time: 3600
+  with_items:
+    - aptitude
+    - ntp
+    - ntpdate
+    - python-pip
   tags:
     - apt
     - ntp
