--- a/install_files/ansible-base/roles/tor-hidden-services/tasks/install_tor.yml
+++ b/install_files/ansible-base/roles/tor-hidden-services/tasks/install_tor.yml
@@ -10,7 +10,7 @@
 - name: Setup Tor apt repo.
   apt_repository:
     filename: tor_apt_freedom_press
-    repo: deb {{ tor_apt_repo_url }} {{ ansible_lsb.codename }} main
+    repo: deb {{ tor_apt_repo_url }} trusty main
     state: present
   register: add_tor_apt_repo
   tags:
