DO NOT COMMIT - getting app tests to run on server :(
I didnt say pass! they just be running

--- a/install_files/ansible-base/roles/app-test/defaults/main.yml
+++ b/install_files/ansible-base/roles/app-test/defaults/main.yml
@@ -10,6 +10,9 @@ apache_user: www-data
 
 # Additional apt packages required for running the application tests.
 test_apt_dependencies:
+  - enchant
+  - firefox
+  - gettext
   - xvfb
 
 # Additional Python dependencies required for running the application tests.
