Removes hardcoded path for "ip" utility
The /bin/ip path was correct for Debian-based hosts, but on Fedora 26
(the default for Qubes AppVMs), it's at /usr/sbin/ip. Let's trust PATH to do its thing.

--- a/install_files/ansible-base/roles/restrict-direct-access/defaults/main.yml
+++ b/install_files/ansible-base/roles/restrict-direct-access/defaults/main.yml
@@ -16,7 +16,7 @@ tor_hidden_services_parent_dir: /var/lib/tor/services
 # to route to a specific IP host
 admin_net_int:
   Linux:
-    cmd: "/bin/ip r get "
+    cmd: "ip r get "
     rgx: "(?<=dev )\\w+"
   Darwin:
     cmd: "/sbin/route -n get "
