--- a/molecule/qubes-staging/molecule.yml
+++ b/molecule/qubes-staging/molecule.yml
@@ -29,7 +29,7 @@ provisioner:
   lint:
     name: ansible-lint
   options:
-    skip-tags: "grsec,local_build"
+    e: "ansible_become_pass=securedrop"
   config_options:
     defaults:
       callback_whitelist: "profile_tasks, timer"
